--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "rollup": "^2.3.4",
+    "node-sass": "^6.0.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.7.3"
   },
   "dependencies": {
-    "node-sass": "^6.0.0",
     "page": "^1.11.6",
-    "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.7.3"
+    "sirv-cli": "^1.0.0"
   }
 }
